--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 
 html, body {
   height: 100%;
+  padding: 0;
   margin: 0;
   display: flex;
   padding-top: 100px; /* Ajusta este valor según la altura real del navbar */
