--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,6 +7,83 @@ sans-serif;
 
 // Base styles
 
+
+.links-block-home {
+  /* Ancho total y centrado del contenedor principal */
+  border-top:4px solid #B1D004;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+
+  .content {
+    /* Define un ancho máximo para centrar el contenido
+       y un display flex para alinear los 3 nav horizontalmente */
+    max-width: 1200px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between; /* distribuye el espacio entre columnas */
+    gap: 2rem; /* espacio horizontal entre cada nav */
+
+    nav {
+      /* Cada nav se comporta como una columna */
+      flex: 1;
+
+      /* Título de cada columna */
+      h3 {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 0.5rem;
+        font: bold 1rem / 1.5rem 'bernino-regular', Verdana, Arial, Geneva, sans-serif !important;
+      }
+
+
+      /* Listas de enlaces */
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+          margin-bottom: 0.3rem;
+
+          span{
+            font-size: 1rem;
+            color: #6F6F6D;
+            margin-right: 0.5rem;
+            display: inline-block;
+          }
+
+          a {
+            color: #145BC7;
+            text-decoration: none;
+            font-size: 1dvi;
+            font: normal 1rem / 1.5rem 'bernino-regular', Verdana, Arial, Geneva, sans-serif !important;
+
+            &:hover {
+              text-decoration: underline;
+              color: #0056b3;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Ejemplo de responsividad para pantallas pequeñas */
+@media (max-width: 768px) {
+  .links-block-home {
+    margin: 1rem 0;
+  }
+
+  .links-block-home .content {
+    flex-direction: column; /* Pasa a columnas verticales */
+    align-items: flex-start; /* Alinea a la izquierda o usa center si prefieres */
+    gap: 1rem;
+  }
+}
+
 .main-footer {
   justify-content: center;
   flex-direction: column;
@@ -36,6 +113,9 @@ sans-serif;
   .content {
     justify-content: center;
     display: flex;
+
+
+
 
     .footer-links-about {
       display: flex;
