--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,64 @@
 <app-header></app-header>
 
+<div class="container-imagen">
+  <div class="imagen">
+    <img src="../../assets/img/casaInicio.jpg" alt="imagen-inicio" />
+  </div>
+  <section class="new-search-box">
+    <h1 class="new-search-box-title">Estás en casa y me gusta</h1>
+    <div class="new-search-box-subtitle">
+      <form id="free-search-form" class="free-search-form" name="frmAnuDir" method="POST" action="/buscar/">
+        <div id="form-new-radio-button-wrapper" class="form-new-radio-button-wrapper">
+          <fieldset class="new-radio-button">
+            <input name="operation" id="free-search-operation-sale" type="radio" value="sale" autocomplete="off" />
+            <label for="free-search-operation-sale" title="Comprar">
+              Comprar
+            </label>
+            <input name="operation" id="free-search-operation-rent" type="radio" value="rent" autocomplete="off" />
+            <label for="free-search-operation-rent" title="Alquilar">
+              Alquilar
+            </label>
+            <input name="operation" id="free-search-operation-share" type="radio" value="share" autocomplete="off" />
+            <label for="free-search-operation-share" title="Compartir">
+              Compartir
+            </label>
+          </fieldset>
+        </div>
+        <div id="form-typology-wrapper" class="form-typology-wrapper">
+          <select id="typology" name="typology" class="dropdown-list">
+            <option value class="home-select-default-toggle">
+              Tipo de inmueble
+            </option>
+            <option value="newdevelopment">Obra nueva</option>
+            <option value="home">Viviendas</option>
+            <option value="room">Habitación</option>
+            <option value="garage">Garajes</option>
+            <option value="storageroom">Trasteros</option>
+            <option value="office">Oficinas</option>
+            <option value="warehouse">Locales o naves</option>
+            <option value="transfer">Traspasos</option>
+            <option value="land">Terrenos</option>
+            <option value="building">Edificios</option>
+            <option class="d-none" value="vacational">Vacacional</option>
+          </select>
+        </div>
+        <div class="form-item-block" layermobileonblurexclusion="on">
+          <label for="campoBus" class="screen-reader-only"></label>
+          <input id="campoBus" mobileonblur="on" autocomplete="off" type="text" data-validation="pattern required"
+            data-pattern=".{2,}" data-do-not-markup-xiti-validation="false" placeholder="Escribe dónde buscas"
+            name="freeText" data-message-required="Escribe una ubicación donde buscar"
+            data-message-pattern="Escribe una ubicación donde buscar" />
+          <div class="container-result-list">
+            <div class="result-list search-near"></div>
+          </div>
+        </div>
+        <button routerLink="/provincia" id="btn-free-search" class="btn action">Buscar</button>
+      </form>
+    </div>
+  </section>
+</div>
+
+
 <div class="home-app">
 
   <article
@@ -106,250 +165,5 @@
   </article>
 
 </div>
-
-<section class="links-block-home">
-  <div class="content">
-    <nav aria-label="¿Buscas inmueble?">
-      <h3>
-        ¿Buscas inmueble?
-      </h3>
-      <ul>
-        <li>
-          <span aria-current="page">Buscador principal</span>
-        </li>
-        <li>
-          <a href="/pisos-bancos" title="Pisos de bancos">
-            Pisos de bancos
-          </a>
-        </li>
-        <li>
-          <a href="/pisos-vpo" title="Vivienda protegida y VPO">
-            Vivienda protegida y VPO
-          </a>
-        </li>
-        <li>
-          <a href="/properties-for-sale-in-spain"
-            title="Viviendas en venta en España">
-            Viviendas en venta en España
-          </a>
-        </li>
-        <li>
-          <a href="/long-term-rentals-in-spain"
-            title="Viviendas en alquiler en España">
-            Viviendas en alquiler en España
-          </a>
-        </li>
-        <li>
-          <a href="/pisos-en-alquiler" title="Casas y pisos en alquiler">
-            Casas y pisos en alquiler
-          </a>
-        </li>
-        <li>
-          <a href="/pisos-compartidos" title="Pisos compartidos">
-            Pisos compartidos
-          </a>
-        </li>
-        <li>
-          <a
-            href="/base-datos-inquilinos-morosos/como-saber-si-soy-moroso-para-alquilar-casa"
-            title="Solicita tu Certificado de inquilino no moroso">
-            Solicita tu Certificado de inquilino no moroso
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/inversores/"
-            title="Oportunidades de inversión">
-            Oportunidades de inversión
-          </a>
-        </li>
-        <li>
-          <a href="https://es.rentalia.com/"
-            title="Rentalia, alquiler vacacional">
-            Rentalia, alquiler vacacional
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.idealista.com/sala-de-prensa/informes-precio-vivienda/"
-            title="Informe de precios">
-            Informe de precios
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/maps/" title="idealista maps">
-            idealista maps
-          </a>
-        </li>
-        <li>
-          <a href="/luxury-homes-spain"
-            title="Pisos y casas de lujo en venta en España">
-            Pisos y casas de lujo en venta en España
-          </a>
-        </li>
-        <li>
-          <a href="/luxury-rentals-spain"
-            title="Pisos y casas de lujo en alquiler en España">
-            Pisos y casas de lujo en alquiler en España
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <nav aria-label="¿Tienes un inmueble?">
-      <h3>
-        ¿Tienes un inmueble?
-      </h3>
-      <ul>
-        <li>
-          <a href="/info/publicar-anuncio" title="Pon tu anuncio gratis">
-            Pon tu anuncio gratis
-          </a>
-        </li>
-        <li>
-          <a href="/propietarios/" title="Área del propietario">
-            Área del propietario
-          </a>
-        </li>
-        <li>
-          <a href="/info/mejorar-foto-video"
-            title="Mejorar las fotos de tu anuncio">
-            Mejorar las fotos de tu anuncio
-          </a>
-        </li>
-        <li>
-          <a href="/certificadoenergetico/"
-            title="Solicitar certificado energético">
-            Solicitar certificado energético
-          </a>
-        </li>
-        <li>
-          <a href="/contratos-de-alquiler/"
-            title="Crea gratis tu contrato de alquiler">
-            Crea gratis tu contrato de alquiler
-          </a>
-        </li>
-        <li>
-          <a href="/base-datos-inquilinos-morosos/consultar-lista-morosos"
-            title="Consulta si un inquilino es moroso">
-            Consulta si un inquilino es moroso
-          </a>
-        </li>
-        <li>
-          <a href="/valoracion-de-inmuebles/"
-            title="Valora gratis cualquier inmueble">
-            Valora gratis cualquier inmueble
-          </a>
-        </li>
-        <li>
-          <a href="/que-inmobiliaria-elegir/"
-            title="Buscar agencias para vender tu casa fácilmente">
-            Buscar agencias para vender tu casa fácilmente
-          </a>
-        </li>
-        <li>
-          <a href="/base-datos-inquilinos-morosos/como-incluir-morosos"
-            title="Notificar inquilino moroso">
-            Notificar inquilino moroso
-          </a>
-        </li>
-        <li>
-          <a href="/como-vender-tu-casa/"
-            title="Guía sobre cómo vender tu casa">
-            Guía sobre cómo vender tu casa
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.idealista.com/energy/calculadora-de-ahorro-solar/"
-            title="Calcular ahorro instalando paneles solares">
-            Calcular ahorro instalando paneles solares
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/seguros/seguro-impago/ "
-            title="Garantizar 12 mensualidades con un seguro de impago">
-            Garantizar 12 mensualidades con un seguro de impago
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <nav aria-label="¿Eres profesional inmobiliario?">
-      <h3>
-        ¿Eres profesional inmobiliario?
-      </h3>
-      <ul>
-        <li>
-          <a href="/nuevo-profesional"
-            title="Publica tus inmuebles de profesional">
-            Publica tus inmuebles de profesional
-          </a>
-        </li>
-        <li>
-          <a href="/login" title="¿Ya eres cliente? Entra en tu cuenta">
-            ¿Ya eres cliente? Entra en tu cuenta
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/cursos/"
-            title="Cursos inmobiliarios">
-            Cursos inmobiliarios
-          </a>
-        </li>
-        <li>
-          <a href="/info/publicidad" title="Publicidad en idealista">
-            Publicidad en idealista
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/tools/"
-            title="idealista/tools: software de gestión para inmobiliarias">
-            idealista/tools: software de gestión para inmobiliarias
-          </a>
-        </li>
-        <li>
-          <a href="/tools/software-recomendado-para-inmobiliarias"
-            title="Otros software recomendados">
-            Otros software recomendados
-          </a>
-        </li>
-        <li>
-          <a href="/base-datos-inquilinos-morosos/consultar-lista-morosos"
-            title="Registro inquilinos morosos">
-            Registro inquilinos morosos
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/data/"
-            title="idealista/data: tecnología para el análisis inmobiliario">
-            idealista/data: tecnología para el análisis inmobiliario
-          </a>
-        </li>
-        <li>
-          <a href="https://www.avaibook.com"
-            title="AvaiBook: software para gestionar tu alquiler vacacional">
-            AvaiBook: software para gestionar tu alquiler vacacional
-          </a>
-        </li>
-        <li>
-          <a href="https://inmovilla.com/"
-            title="Inmovilla: El mejor CRM inmobiliario">
-            Inmovilla: El mejor CRM inmobiliario
-          </a>
-        </li>
-        <li>
-          <a href="https://www.rentger.com/"
-            title="Rentger: Software de gestión del alquiler">
-            Rentger: Software de gestión del alquiler
-          </a>
-        </li>
-        <li>
-          <a href="https://www.idealista.com/seguros/profesionales/"
-            title="idealista/seguros para profesionales">
-            idealista/seguros para profesionales
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</section>
 
 <app-footer></app-footer>
