--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="container-menu">
     <div class="logo">
-      <img src="../../assets/img/idealista.svg" alt="logo-idealista" />
+      <img src="../../assets/img/idealista.svg" alt="logo-idealista" routerLink="/inicio"/>
     </div>
     <div class="enlaces">
       <a class="anuncio-gratis"> Pon tu anuncio gratis</a>
