--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,7 +22,7 @@ $btn-text-color: #fff;
       display: flex;
       /* Asegura alineación interna si es necesario */
       align-items: center;
-
+      cursor: pointer;
       img {
         height: 50px;
       }
