--- a/src/app/propiedades/propiedades.component.html
+++ b/src/app/propiedades/propiedades.component.html
@@ -1,13 +1,21 @@
 <app-header></app-header>
 
+<a class="navegacion" routerLink="/inicio">idealista</a>
+
+
+<div class="titulo">
+  <h2>105 casas y pisos en Arenal - Museo - Tetuán, Sevilla</h2>
+</div>
+
 <div class="listado-container">
   <!-- Sidebar de filtros -->
   <aside class="sidebar">
-    <button class="btn-guardar">Guardar búsqueda</button>
-
     <h3>Tipo de inmueble</h3>
     <select>
-      <option value="">Viviendas</option>
+      <option value="">Casas</option>
+      <option value="">Pisos</option>
+      <option value="">Oficinas</option>
+      <option value="">Locales</option>
     </select>
 
     <h3>Precio</h3>
@@ -24,17 +32,33 @@
 
     <h3>Habitaciones</h3>
     <div class="filtro-habitaciones">
+      <label><input type="checkbox" /> 0</label>
       <label><input type="checkbox" /> 1</label>
       <label><input type="checkbox" /> 2</label>
+      <label><input type="checkbox" /> 3</label>
+      <label><input type="checkbox" /> 4 habitaciones o más</label>
     </div>
+
+    <h3>Baños</h3>
+    <div class="filtro-habitaciones">
+      <label><input type="checkbox" /> 1</label>
+      <label><input type="checkbox" /> 2</label>
+      <label><input type="checkbox" /> 3 baños o mas</label>
+    </div>
+
+    <h3>Caracteristicas</h3>
+    <div class="filtro-caracteristicas">
+      <label><input type="checkbox" /> 0</label>
+      <label><input type="checkbox" /> 1</label>
+      <label><input type="checkbox" /> 2</label>
+      <label><input type="checkbox" /> 3</label>
+      <label><input type="checkbox" /> 4 habitaciones o más</label>
+    </div>
+
   </aside>
 
   <!-- Contenedor de las propiedades -->
   <section class="propiedades">
-    <div class="titulo">
-      <h1>105 casas y pisos en Arenal - Museo - Tetuán, Sevilla</h1>
-      <button class="btn-mapa">Ver en mapa</button>
-    </div>
 
     <div class="ordenar">
       <label>Ordenar:</label>
