--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,6 +14,7 @@
   display: flex;
   /* Asegura alineación interna si es necesario */
   align-items: center;
+  cursor: pointer;
 }
 
 .header .container-menu .logo img {
