--- a/src/app/provincia/provincia.component.scss
+++ b/src/app/provincia/provincia.component.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: row;
   margin: 1rem;
+  margin-left: 5%;
 
 
   .map-container {
@@ -40,6 +41,7 @@
         padding: 0.5rem;
 
         a{
+          text-decoration: none;
           color:#145BC7;
           font: normal 1rem / 1.5rem 'bernino-regular', Verdana, Arial, Geneva, sans-serif !important;
           &:hover {
