--- a/src/app/propiedad/propiedad.component.html
+++ b/src/app/propiedad/propiedad.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header-yellow></app-header-yellow>
 
 <div class="navegacion">
   <a routerLink="/propiedades">Viviendas en localidad </a>
