--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -42,23 +42,32 @@
             <option class="d-none" value="vacational">Vacacional</option>
           </select>
         </div>
-        <div class="form-item-block" layermobileonblurexclusion="on">
-          <label for="campoBus" class="screen-reader-only"></label>
-          <input id="campoBus" mobileonblur="on" autocomplete="off" type="text" data-validation="pattern required"
-            data-pattern=".{2,}" data-do-not-markup-xiti-validation="false" placeholder="Escribe dónde buscas"
-            name="freeText" data-message-required="Escribe una ubicación donde buscar"
-            data-message-pattern="Escribe una ubicación donde buscar" />
-          <div class="container-result-list">
-            <div class="result-list search-near"></div>
-          </div>
-        </div>
+        <mat-form-field>
+          <mat-label>Provincia</mat-label>
+          <input type="text" matInput [formControl]="provinciaControl" [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let provincia of filteredProvincias$ | async" [value]="provincia.nombre">
+              {{ provincia.nombre }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
         <button routerLink="/provincia" id="btn-free-search" class="btn action">Buscar</button>
       </form>
     </div>
   </section>
 </div>
-
-
+<!--
+<div class="form-item-block" layermobileonblurexclusion="on">
+  <label for="campoBus" class="screen-reader-only"></label>
+  <input id="campoBus" mobileonblur="on" autocomplete="off" type="text" data-validation="pattern required"
+    data-pattern=".{2,}" data-do-not-markup-xiti-validation="false" placeholder="Escribe dónde buscas"
+    name="freeText" data-message-required="Escribe una ubicación donde buscar"
+    data-message-pattern="Escribe una ubicación donde buscar" />
+  <div class="container-result-list">
+    <div class="result-list search-near"></div>
+  </div>
+</div>
+-->
 <div class="home-app">
 
   <article
