--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -39,12 +39,12 @@
           <mat-label>Provincia</mat-label>
           <input type="text" matInput [formControl]="provinciaControl" [matAutocomplete]="auto">
           <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let provincia of filteredProvincias$ | async" [value]="provincia.nombre">
+            <mat-option *ngFor="let provincia of filteredProvincias$ | async" [value]="provincia.nombre" (onSelectionChange)="setSelectedProvincia(provincia)">
               {{ provincia.nombre }}
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-        <button routerLink="/provincia" id="btn-free-search" class="btn action">Buscar</button>
+        <button (click)="navigateToProvincia()" id="btn-free-search" class="btn action">Buscar</button>
       </form>
     </div>
   </section>
