--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <a class="anuncio-gratis"> Pon tu anuncio gratis</a>
       <a class="enlace"> Tus Búsquedas</a>
       <a class="enlace"> Chat </a>
-      <a class="enlace"> Iniciar Sesión</a>
+      <a class="enlace" routerLink="/perfil"> Iniciar Sesión</a>
     </div>
   </div>
 </div>
