--- a/src/app/provincia/provincia.component.html
+++ b/src/app/provincia/provincia.component.html
@@ -5,7 +5,7 @@
 <div class="provincias-container">
 
   <div class="map-container">
-    <h1>Mapa de {{provincia}}: anuncios de {{tipoPropiedad}} en venta</h1>
+    <h1>Mapa de {{provincia}}: anuncios de {{tipoPropiedad}} en {{tipoPreferencia}}</h1>
     <img src="../../assets/img/sevilla.png" alt="Mapa de Sevilla" />
   </div>
 
@@ -18,7 +18,5 @@
     </ul>
   </div>
 </div>
-
-
 
 <app-footer></app-footer>
