--- a/src/app/card-inmueble/card-inmueble.component.html
+++ b/src/app/card-inmueble/card-inmueble.component.html
@@ -3,7 +3,7 @@
   <div class="info">
     <a routerLink="/propiedad">{{ datos.titulo }}</a>
     <p class="precio"><strong> {{ datos.precio | currency:'EUR' }}</strong></p>
-    <p>{{ datos.habitaciones }} hab {{ datos.metros }} m² Ubicación:{{ datos.ubicacion }}</p>
+    <p>{{ datos.n_habitaciones }} hab {{ datos.tamanio }} m² Ubicación:{{ datos.ubicacion }}</p>
     <p class="descripcion">{{datos.descripcion}}</p>
   </div>
 </div>
