--- a/src/app/propiedades/propiedades.component.html
+++ b/src/app/propiedades/propiedades.component.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="lista-propiedades">
-      <app-card-inmueble *ngFor="let inmueble of inmuebles" [datos]="inmueble"></app-card-inmueble>
+      <app-card-inmueble *ngFor="let inmueble of propiedades" [datos]="inmueble"></app-card-inmueble>
     </div>
   </section>
 </div>
