--- a/src/app/propiedades/propiedades.component.html
+++ b/src/app/propiedades/propiedades.component.html
@@ -55,6 +55,8 @@
       <label><input type="checkbox" /> 4 habitaciones o más</label>
     </div>
 
+    <button class="btn" type="submit">Buscar</button>
+
   </aside>
 
   <!-- Contenedor de las propiedades -->
