--- a/src/app/propiedades/propiedades.component.scss
+++ b/src/app/propiedades/propiedades.component.scss
@@ -76,6 +76,23 @@
         font-size: 14px;
       }
     }
+
+    .btn {
+      margin-top: 3%;
+      padding: 12px 30px;
+      background: #e50068;
+      color:white;
+      border: none;
+      border-radius: .125rem;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background 0.3s;
+
+      &:hover {
+        background: darken(#e50068, 10%);
+      }
+    }
+
   }
 
   .propiedades {
