--- a/src/app/propiedad/propiedad.component.html
+++ b/src/app/propiedad/propiedad.component.html
@@ -5,29 +5,31 @@
 </div>
 
 <div class="propiedad-container">
-
   <div class="detalle-inmueble">
     <!-- Imagen del inmueble -->
 
     <div class="inmueble-container">
       <div class="imagen-container">
-        <img src="../../assets/img/casaInicio.jpg" [alt]="inmueble.titulo">
+        <img src="../../assets/img/casaInicio.jpg" [alt]="inmueble.titulo" />
       </div>
       <!-- Información del inmueble -->
       <div class="info-container">
         <h1>{{ inmueble.titulo }}</h1>
-        <p class="ubicacion">{{ inmueble.provincia }} - {{inmueble.localidad}} - {{inmueble.ubicacion}}<a href="#">Ver
-            mapa</a></p>
-        <p class="precio">{{ inmueble.precio | currency:'EUR' }}</p>
-        <p class="detalles">{{ inmueble.tamanio }} m² | {{ inmueble.n_habitaciones
-          }}
-          hab | Planta {{ inmueble.planta }} {{ inmueble.ascensor ?
-          'con ascensor'
-          : 'sin ascensor' }}</p>
+        <p class="ubicacion">
+          {{ inmueble.ubicacion }}<a href="#">Ver mapa</a>
+        </p>
+        <p class="precio">{{ inmueble.precio | currency : "EUR" }}</p>
+        <p class="detalles">
+          {{ inmueble.tamanio }} m² | {{ inmueble.n_habitaciones }} hab | Planta
+          {{ inmueble.planta }}
+          {{ inmueble.ascensor ? "con ascensor" : "sin ascensor" }}
+        </p>
 
-        <button class="btn-guardar">Guardar favorito</button>
-        <button class="btn-descartar">Descartar</button>
-        <button class="btn-compartir">Compartir</button>
+        <div class="acciones">
+          <button class="btn-guardar">Guardar favorito</button>
+          <button class="btn-descartar">Descartar</button>
+          <button class="btn-compartir">Compartir</button>
+        </div>
 
         <h2>Comentario del anunciante</h2>
         <p class="descripcion">{{ inmueble.descripcion }}</p>
@@ -37,7 +39,8 @@
     <aside class="contacto-container">
       <h3>Pregunta al anunciante</h3>
       <textarea
-        placeholder="Hola, me interesa este piso y me gustaría hacer una visita."></textarea>
+        placeholder="Hola, me interesa este piso y me gustaría hacer una visita."
+      ></textarea>
       <button class="btn-contactar">Contactar por chat</button>
       <p class="telefono">📞 Ver teléfono</p>
     </aside>
