crear anuncio funcionando basico

--- a/src/app/publicar-anuncio/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/publicar-anuncio/crear-anuncio/crear-anuncio.component.html
@@ -1,3 +1,10 @@
+<div class="header">
+  <div class="container-menu">
+    <div class="logo">
+      <img src="../../assets/img/idealista.svg" alt="logo-idealista" routerLink="/inicio"/>
+    </div>
+  </div>
+</div>
 <div class="crear-anuncio">
   <h2>Publicar un anuncio</h2>
   <form [formGroup]="anuncioForm" (ngSubmit)="onSubmit()">
